# vr-engine

./: .gitignore  README.md  gradle.properties  settings.gradle
XrSamples/VrEngine/Projects/Android/: build.gradle  settings.gradle
XrSamples/VrEngine/Src/: main.cpp
app/: CMakeLists.txt  build.gradle
app/openxr_loader/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/res/values/: strings.xml
compiler/: compile.py
